# infinite

./: CMakeLists.txt  color.cpp  color.h  colors.txt  forms.txt  fractal.cpp  fractal.h  infinite.cpp  infinite.h  main.cpp  matrix3x3.cpp  matrix3x3.h  palette.cpp  palette.h  triangle.cpp  triangle.h  vector3d.cpp  vector3d.h
